[package]
name = "solana_timelock"
version = "0.1.0"
description = "Delayed transaction execution on Solana"
edition = "2021"
authors = ["Proph3t <metaproph3t@protonmail.com"]
license = "LGPL-3.0"
repository = "https://github.com/metaDAOproject/solana-timelock"
categories = ["cryptography::cryptocurrencies"]
keywords = ["solana", "defi", "ponzu"]

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_timelock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
